footer finalizado falta linkdin

--- a/index.html
+++ b/index.html
@@ -420,12 +420,42 @@
 			</div>
 		</div>
 </div>
-	        
-<section class="contenedor-prefooter">
-    <div class="privacidad">
-        <p>Contá con el mejor asesoramiento gratuito, para la más variada cobertura médica y elegí la opción que mejor se adapte a tu necesidad. su consulta no nos molesta.... Medipriva Salud es totalmente independiente de las empresas de medicina prepaga y obras sociales y no asegura la disponibilidad, contratación o servicios detallados en cada plan.</p>
-    </div>
-</section>
+	    
+<footer class="footer">
+	<div>
+		<img src="img/logo-solo.png" alt="Logo-medipriva">
+	</div>
+	<div class="enlaces-footer">
+		<ul>
+			<li><a href="#inicio">Inicio</a></li>
+			<li><a href="#contacto">Contacto</a></li>
+			<li><a href="#bene">Beneficios</a></li>
+			<li><a href="#clinicas">Clínicas</a></li>
+		</ul>
+	</div>
+	<div class="span-footer">
+		<span>
+			Contá con el mejor asesoramiento gratuito, para la más variada cobertura médica y 
+			elegí la opción que mejor se adapte a tu necesidad. su consulta no nos molesta.
+			Medipriva Salud es totalmente independiente de las empresas de medicina prepaga y 
+			obras sociales y no asegura la disponibilidad, contratación o servicios detallados en cada plan.
+		</span>
+	</div>
+	<div>
+		<div class="barra-con-footer">
+			<a href="https://www.instagram.com/medipriva/?hl=es-la" target="_blank"><img src="img/instagram-blanco.svg" alt="Instagram"></a>
+			<a href="https://www.facebook.com/mediprivasalud" target="_blank"><img src="img/facebook-blanco.svg" alt="Facebook" style="padding-left: 2px;"></a>
+			<a href="https://api.whatsapp.com/send?phone=541156161836&text=Solicito%20informacion%20" target="_blank"><img src="img/whatsapp-blanco.svg" alt="WhatsApp"></a>
+			<a href="https://web.telegram.org/#/im?p=@sancorsaludstaffmedico" target="_blank"><img src="img/telegrama-blanco.svg" alt="Telegram"></a>
+		</div>
+	</div>
+	<div class="border-1">
+	
+	</div>
+	<div class="enlace-lucas">
+		<span><a href="">Desarrolado por Lucas</a></span>
+	</div>
+</footer>
 			
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
