--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 	
 	</div>
 	<div class="enlace-lucas">
-		<span><a href="">Desarrolado por Lucas</a></span>
+		<span><a href="https://www.linkedin.com/in/lucas-c-97a320184/" target="_blank">Desarrolado por Lucas</a></span>
 	</div>
 </footer>
 			
