--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
    <!--Pre Header-->
    <section class="pre-header-container" id="inicio">
       <div class="logo-container">
-         <a href="https://art.medipriva.com"><img src="img/logo-header-medipriva.svg" alt="Logo Medipriva" width="228"> </a>
+         <a href="https://art.medipriva.com"><img src="img/logo-header-medipriva.svg" loading="eager" alt="Logo Medipriva" width="228"> </a>
       </div>
   
       <div class="enlaces-container">
-          <a href="https://www.instagram.com/medipriva/?hl=es-la" target="_blank"><img class="img" src="img/instagram.svg" width="20" alt="logo instagram"></a>
-          <a class="enlace" href="https://www.facebook.com/mediprivasalud" target="_blank"><img src="img/facebook.svg" width="20" alt="facebook logo"></a>
-          <a class="enlace" href="https://api.whatsapp.com/send?phone=541156161836&text=Solicito%20informacion%20" target="_blank"><img src="img/whatsapp.svg" width="20" alt="Whatsapp logo"></a>
-          <a class="enlace" href="https://web.telegram.org/#/im?p=@sancorsaludstaffmedico" target="_blank"><img src="img/telegrama.svg" width="20" alt="Telegram logo"></a>
+          <a href="https://www.instagram.com/medipriva/?hl=es-la" target="_blank"><img class="img" src="img/instagram.svg" width="20" loading="eager" alt="logo instagram"></a>
+          <a class="enlace" href="https://www.facebook.com/mediprivasalud" target="_blank"><img src="img/facebook.svg" width="20" loading="eager" alt="facebook logo"></a>
+          <a class="enlace" href="https://api.whatsapp.com/send?phone=541156161836&text=Solicito%20informacion%20" target="_blank"><img src="img/whatsapp.svg" width="20" loading="eager" alt="Whatsapp logo"></a>
+          <a class="enlace" href="https://web.telegram.org/#/im?p=@sancorsaludstaffmedico" target="_blank"><img src="img/telegrama.svg" width="20" loading="eager" alt="Telegram logo"></a>
       </div>
     </section>
      
@@ -109,13 +109,13 @@
 				<p class="p-card">Mejorá tu plan de salud</p>
 				<span>Afiliación online</span>
 			</div>
-			<img class="elipse" src="img/elipse1.svg" class="" alt="Elipse">
-			<img class="familiaSlider" src="img/familiaSlider1.png" class="" alt="Elipse">
+			<img class="elipse" src="img/elipse1.svg" loading="eager" alt="Elipse">
+			<img class="familiaSlider" src="img/familiaSlider1.png" loading="eager" class="" alt="Elipse">
 		</div>
 		
 	</section>
 
-		<!--Formulario-->
+	<!--Formulario-->
 	<div class="form-container">
 		<p class="conectate">CONECTATE CON NUESTROS ASESORES</p>
 		<form class="form-style" method="post" id="datos_formulario" >
@@ -238,7 +238,7 @@
     <section class="contenedor sobre-nosotros">
         <h2 class="titulo anim"><strong>MEDICINA PREPAGA EN BUENOS AIRES</strong></h2>
            	<div class="contenedor-sobre-nosotros anim">
-           		<img src="img/familia.svg" alt="familia" class="imagen-familia" width="500">
+           		<img src="img/familia.svg" loading="lazy" alt="familia" class="imagen-familia" width="500">
            		<div class="contenedor-text">
            		  <p>Cobertura medica en los mejores controles de salud de Capital Federal y Gran Buenos Aires. Cambiate ahora y empeza a ahorrar, consultanos por WhatsApp. Planes para monotributistas, seguro medico para todo el grupo familiar. Responsabilidad, calidad y precio.</p>
            	    </div>
@@ -422,8 +422,8 @@
 </div>
 	    
 <footer class="footer">
-	<div>
-		<img src="img/logo-solo.png" alt="Logo-medipriva">
+	<div class="enlace-icono">
+		<a href="https://www.medipriva.com/"><img src="img/logo-solo.png" alt="Logo-medipriva"></a>
 	</div>
 	<div class="enlaces-footer">
 		<ul>
