Loader finalizado y animacion de imagenes Header

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
   
-   
+   <!--Loader General-->
+   <div id="loader-wrapper">
+      <img src="./img/ring-loader.gif" alt="Loader">
+   </div>
    <!--Pre Header-->
    <section class="pre-header-container" id="inicio">
       <div class="logo-container">
