Animacion y lazy finalizados

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
            		  <p>Cobertura medica en los mejores controles de salud de Capital Federal y Gran Buenos Aires. Cambiate ahora y empeza a ahorrar, consultanos por WhatsApp. Planes para monotributistas, seguro medico para todo el grupo familiar. Responsabilidad, calidad y precio.</p>
            	    </div>
            	</div>
-            <h2 class="titulo" style="margin-top:80px;"><strong>¿QUIENES SOMOS?</strong></h2>
+            <h2 class="titulo anim" style="margin-top:80px;"><strong>¿QUIENES SOMOS?</strong></h2>
            	<div class="quienes-somos">
                 <img src="img/doctores.svg" alt="familia" class="imagen-doc anim" width="750">
            		<div class="contenedor-text-2 anim">
