Imagen modificado y contraseña de @testmail emial host

--- a/index.html
+++ b/index.html
@@ -112,8 +112,11 @@
 				<p class="p-card">Mejorá tu plan de salud</p>
 				<span>Afiliación online</span>
 			</div>
-			<img class="elipse" src="img/elipse1.svg" loading="eager" alt="Elipse">
-			<img class="familiaSlider" src="img/familiaSlider1.png" loading="eager" class="" alt="Elipse">
+			<div class="img-elipse-container">
+                 <img class="elipse" src="img/elipse1.svg" loading="eager" alt="Elipse">
+			     <img class="familiaSlider" src="img/familiaSlider1.png" loading="eager" class="" alt="Elipse">
+			</div>
+			
 		</div>
 		
 	</section>
@@ -188,7 +191,7 @@
     </style>
 
 	  
-	   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	 
 	
 
