Actualizacion: sitemap,contraseña recibir data, cambios css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<meta name="google-site-verification" content="eLk2G8wf7MObZB0TQF26OuqVoRbCzIB36eExxGmfXX8"/>
     <meta name="description" content="Obra Social Prepaga. Ofrecemos: Importantes descuentos por hijo, medico a domicilio, odontologia general 100%, nutricionista, oftalmologica (lentes de contacto )">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	
 	<link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <!--GOOGLE FONTS LINKS-->
@@ -123,7 +122,10 @@
 
 	<!--Formulario-->
 	<div class="form-container">
-		<p class="conectate">CONECTATE CON NUESTROS ASESORES</p>
+		<div>
+		  <p class="conectate">CONECTATE CON NUESTROS ASESORES</p>	
+		</div>
+		
 		<form class="form-style" method="post" id="datos_formulario" >
 		   <div class="scroll form form-group is-invalid">
 		  	    <div class="label-input-container">
