Cambio numero de asociados

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
            	<div class="quienes-somos">
                 <img src="img/doctores.svg" alt="familia" class="imagen-doc anim" width="750">
            		<div class="contenedor-text-2 anim">
-                    <p style="margin-top: 0px;">Somos una empresa de medicina prepaga con una amplia trayectoria, avalada por los más de 500.000 afiliados. Te brindamos la oportunidad de contratar un plan que se ajuste a tus necesidades y que te ofrezca la mayor cantidad de beneficios. ​​​​​​​Contamos con una red de más de 160.000 prestadores a nivel nacional, con acceso a consultorios externos, guardias, internación, etc. Tenemos los mejores y con la mejor opción para que puedas cuidarte y cuidar a quien más querés.​​​​​​​Somos profesionales en lo que hacemos y por eso te orientamos para que elijas la opción que se amolde a vos y a tu familia.</p>
+                    <p style="margin-top: 0px;">Somos una empresa de medicina prepaga con una amplia trayectoria, avalada por los más de 203.000 afiliados. Te brindamos la oportunidad de contratar un plan que se ajuste a tus necesidades y que te ofrezca la mayor cantidad de beneficios. ​​​​​​​Contamos con una red de más de 160.000 prestadores a nivel nacional, con acceso a consultorios externos, guardias, internación, etc. Tenemos los mejores y con la mejor opción para que puedas cuidarte y cuidar a quien más querés.​​​​​​​Somos profesionales en lo que hacemos y por eso te orientamos para que elijas la opción que se amolde a vos y a tu familia.</p>
            		</div>
            	</div>
     </section>
@@ -449,7 +449,7 @@
 	
 	</div>
 	<div class="enlace-lucas">
-		<span><a href="https://www.linkedin.com/in/lucas-c-97a320184/" target="_blank">Desarrolado por Lucas</a></span>
+		<span><a href="https://lvcas-ca.web.app/" target="_blank">Desarrolado por <strong>Lucas</strong></a></span>
 	</div>
 </footer>
 			
