Background img & menu

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 </header>
 
     
-<div class="container-general-form" id="contacto" style=" background: #384C6429;">
+<div class="container-general-form" id="contacto">
 <section class="areaform">
 		    
     <!--BARRA ANTES DEL FORMULARIO-->
