--- a/index.html
+++ b/index.html
@@ -107,8 +107,22 @@
 		<div>
 		  <p class="conectate">CONECTATE CON NUESTROS ASESORES</p>	
 		</div>
+
+	
 		
 		<form class="form-style" method="post" id="datos_formulario" >
+	    <div class="banner-promo-container">
+			<div class="banner-promo">
+				<div class="circulo"></div>
+				<div class="circulo"></div>
+				<div class="circulo"></div>
+				<div class="text-container">
+					<h5>HASTA 30% OFF ABONANDO
+						CON TARJETA DE CRÉDITO O CBU</h5>
+				</div>
+				
+			</div>
+		</div>
 		   <div class="scroll form form-group is-invalid">
 		  	    <div class="label-input-container" id="grupo-nombre">
 			    	<label for="Nombre" class="label labelnombre">Nombre</label>
