--- a/index.html
+++ b/index.html
@@ -89,11 +89,9 @@
     <!--BARRA ANTES DEL FORMULARIO-->
 	<section class="contenedor">
 		<div class="imagenes-slider">
-			<div class="recta">
-				<p class="p-card">Mejorá tu plan de salud</p>
-				<span>Afiliación online</span>
-			</div>
+		
 			<div class="img-elipse-container">
+				 <img class="elipse-2" src="./img/Ellipse-blaco.svg" alt="elipse-blanco">
                  <img class="elipse" src="img/elipse1.svg" loading="eager" alt="Elipse">
 			     <img class="familiaSlider" src="img/familiaSlider1.png" loading="eager" class="" alt="Elipse">
 			</div>
