--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+            <div class="container-fluid container-nav">
             <a class="navbar-brand" href="#"><img src="./img/logo-new.png" alt="Logo Medipriva"></a>
             <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
