avanzando con clinicas

--- a/index.html
+++ b/index.html
@@ -51,49 +51,7 @@
    <div id="loader-wrapper">
       <img src="./img/ring-loader.gif" alt="Loader">
    </div>
-   <!--Pre Header
 
-    <section class="pre-header-container" id="inicio">
-	   <div class="enlaces-container">
-          <a href="https://www.instagram.com/medipriva/?hl=es-la" target="_blank"><img class="img" src="img/instagram.svg" width="20" loading="eager" alt="logo instagram"></a>
-          <a class="enlace" href="https://www.facebook.com/mediprivasalud" target="_blank"><img src="img/facebook.svg" width="20" loading="eager" alt="facebook logo"></a>
-          <a class="enlace" href="https://api.whatsapp.com/send?phone=541156161836&text=Solicito%20informacion%20" target="_blank"><img src="img/whatsapp.svg" width="20" loading="eager" alt="Whatsapp logo"></a>
-          <a class="enlace" href="https://web.telegram.org/#/im?p=@sancorsaludstaffmedico" target="_blank"><img src="img/telegrama.svg" width="20" loading="eager" alt="Telegram logo"></a>
-      </div>
-    </section>
-
-   -->
-  
-
-	<!--Nav-Footer
-	<div class="header-footer-container">
-		<div class="header-footer">
-			<img class="hambur" src="img/justificar-alinear.svg" width="35" alt="hamburguesa">
-		</div>
-	</div>
-	
-	-->
-	
-	 <!--Nav
-	<section class="menu-container">
-		<div class="logo-container">
-			<a href="https://medipriva.com.ar"><img src="img/sancor-logo.png" loading="eager" alt="Logo Medipriva" width="228"> </a>
-		 </div>
-		<div class="menu">
-			<li><a class="menu-enlace animate__bounce" href="#inicio">INICIO</a></li>
-			<li><a class="menu-enlace" href="#contacto">CONTACTO</a></li>
-			<li><a class="menu-enlace" href="#bene">BENEFICIOS</a></li>
-			<li><a class="menu-enlace" href="#clinicas">CLINICAS</a></li>
-		</div>
-		<div class="cruz-container">
-			<img class="cruz" src="img/cerrar.svg" alt="close" width="50px">
-		</div>
-	 </section>
-	
-	
-	-->
-	 
-</header>
 
 <header class="c-header">
 	<nav class="navbar navbar-expand-lg navbar-light">
@@ -184,50 +142,7 @@
 	
 </header>
 
-
-
-    
-<div class="container-general-form" id="contacto">
-<section class="areaform">
-		    
-    <!--BARRA ANTES DEL FORMULARIO-->
-	<section class="contenedor">
-		<div class="imagenes-slider">
-		
-			<div class="img-elipse-container">
-				 <img class="elipse-2" src="./img/Ellipse-blaco.svg" loading="lazy" alt="elipse-blanco">
-                 <img class="elipse" src="img/elipse1.svg" loading="lazy" alt="Elipse">
-			     <img class="familiaSlider" src="img/familiaSlider1.png" loading="lazy" class="" alt="Elipse">
-				 <div class="barra-con-redes">
-					<p>Seguinos:</p>
-					<a href="https://www.instagram.com/medipriva/?hl=es-la" target="_blank"><img src="img/instagram-blanco.svg" alt="Instagram"></a>
-					<a href="https://www.facebook.com/mediprivasalud" target="_blank"><img src="img/facebook-blanco.svg" alt="Facebook" style="padding-left: 2px;"></a>
-					<a href="https://api.whatsapp.com/send?phone=541156161836&text=Solicito%20informacion%20" target="_blank"><img src="img/whatsapp-blanco.svg" alt="WhatsApp"></a>
-					<a href="https://web.telegram.org/#/im?p=@sancorsaludstaffmedico" target="_blank"><img src="img/telegrama-blanco.svg" alt="Telegram"></a>
-				 </div>
-			</div>
-			
-		</div>
-		
-	</section>
-
-	<!--Formulario-->
-	<div class="form-container">
-		<div class="logo-container-mobile">
-            <img src="img/sancor-logo.png" alt="logo-sancor">
-		</div>
-
-	
-		
-		<div>
-		  <p class="conectate">COTIZÁ TU PLAN HOY</p>	
-		</div>
-
-	
-	</div>
-
-	
-    <style>
+<style>
         .loader{
             display: none;
             background-color: #007bff;
@@ -256,40 +171,132 @@
 		.padding-top-label{
 			padding-top: 12px;
 		}
-    </style>
- 
-	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+</style>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	
-</section>
 
-</div>
 
-<!--Beneficios cortos-->
-<section class="contenedor">	
-	<p id="bene" class="titulo">BENEFICIOS</p>
-	<div class="beneficios-cortos">
-		<ul>
-			<li>Acceso al servicio solo con la credencial, sin bonos ni copagos.</li>
-			<li>Internación sin costo ni tope de días en habitación individual.</li>
-			<li>Estudios de baja, media y alta complejidad.</li>
-			<li>Importantes descuentos por hijo.</li>
-			<li>Servicio de emergencia y urgencia.</li>
-			<li>40% 50% 60% en farmacia.</li>
-			<li>Kinesiología sin tope ni límite.</li>
-			<li>Médico a domicilio.</li>
-		</ul>
-		<ul class="bene-2">
-			<li>Oftalmología (armazón, cristales y lentes de contacto).​​​​​​​</li>
-			<li>Reintegros en prestadores fuera de nuestra cartilla. (según plan).</li>
-			<li>Psicología y salud mental con cobertura en internación..</li>
-			<li>Servicio de nutricionista y ortopedia.</li>
-			<li>Plan materno infantil PMI al 100%.</li>
-			<li>Odontología general al 100%.</li>
-			<li>Anticonceptivos al 100%.</li>
-			<li>Consultorio Online</li>
-		</ul>
-	</div>
-</section>
+<main class="c-main">
+	<section class="c-main__beneficios">
+		<h1>BENEFICIOS</h1>
+		<p>
+			Tu salud es lo más importante, por eso te ofrecemos una amplia gama 
+			de beneficios para que estés siempre protegido.
+		</p>
+
+		<div class="c-main__beneficios--cards">
+			<div class="c-main__beneficios--card">
+				<img src="/img/credencial.png" alt="credencial" >
+				<span>Acceso al servicio solo con la credencial, sin bonos ni copagos.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/cama.png" alt="cama" >
+				<span>Internación sin costo ni tope de días en habitación individual.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/libro.png" alt="libro" >
+				<span>Estudios de baja, media y alta complejidad.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/mama.png" alt="madre-hijo" >
+				<span>Importantes descuentos por hijo.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/sirena.png" alt="sirena" >
+				<span>Servicio de emergencia y urgencia.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/medicina.png" alt="medicina" >
+				<span>40% 50% 60% en farmacia.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/pie.png" alt="pie" >
+				<span>Kinesiología sin tope ni límite.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/casa.png" alt="casa" >
+				<span>Médico en casa.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/anteojos.png" alt="anteojos" >
+				<span>Oftalmología (armazón, cristales y lentes de contacto).​​​​</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/campo-texto.png" alt="Campo texto" >
+				<span>Psicología y salud mental con cobertura en internación.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/naranja.png" alt="Naranja" >
+				<span>Servicio de nutricionista y ortopedia.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/cuna.png" alt="Cuna" >
+				<span>Plan materno infantil PMI al 100%.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/diente.png" alt="Diente" >
+				<span>Odontología general al 100%.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/escudo.png" alt="Escudo" >
+				<span>Anticonceptivos al 100%.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/celu.png" alt="Celu" >
+				<span>Médico online.</span>
+			</div>
+			<div class="c-main__beneficios--card">
+				<img src="/img/tarjeta-dinero.png" alt="Tarjeta" >
+				<span>Reintegros en prestadores fuera de nuestra cartilla.</span>
+			</div>
+		
+			
+			
+		</div>
+	</section>
+
+	<section class="c-main__clinicas">
+		<h1>CLINICAS POR ZONA</h1>
+		<div class="accordion" id="accordionExample">
+			<div class="accordion-item">
+			  <h2 class="accordion-header" id="headingOne">
+				<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+				  Accordion Item #1
+				</button>
+			  </h2>
+			  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+				  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+				</div>
+			  </div>
+			</div>
+			<div class="accordion-item">
+			  <h2 class="accordion-header" id="headingTwo">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+				  Accordion Item #2
+				</button>
+			  </h2>
+			  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+				  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+				</div>
+			  </div>
+			</div>
+			<div class="accordion-item">
+			  <h2 class="accordion-header" id="headingThree">
+				<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+				  Accordion Item #3
+				</button>
+			  </h2>
+			  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+				<div class="accordion-body">
+				  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+				</div>
+			  </div>
+			</div>
+		</div>
+	</section>
+</main>
 
 
 
