--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!--GOOGLE FONTS LINKS-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
-  
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
     <!--MATERIAL ICONS-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -107,21 +106,21 @@
 								 -->
 			
 					<div class="label-input-container" id="grupo-localidad">
-						<input type="text" name="localidad" class="rounded form-control">
+						<input type="text" name="localidad" class="rounded form-control" placeholder="Localidad">
 						<p class="formulario__input-error">El Nombre tiene que ser de 4 a 16 dígitos y solo puede contener letras
 						</p>
 					</div>
 					<div class="label-input-container" id="grupo-telefono">
 						
-						<input class="rounded form-control" type="text" name="telefono" id="telefono">
+						<input class="rounded form-control" type="text" name="telefono" id="telefono" placeholder="Teléfono">
 						<p class="formulario__input-error">ingrese su número de teléfono</p>
 					</div>
 					<div class="label-input-container" id="grupo-correo">
-						<input class="rounded form-control" type="email" name="correo" id="correo">
+						<input class="rounded form-control" type="email" name="correo" id="correo" placeholder="Mail">
 						<p class="formulario__input-error">ingrese su dirección de email</p>
 					</div>
 					<div class="form-group label-input-container">
-						<textarea class="form-control" name="mensaje" rows="3" id="mensaje"></textarea>
+						<textarea class="form-control" name="mensaje" rows="3" id="mensaje" placeholder="Mensaje"></textarea>
 					</div>
 					<div class="loader">
 						<img class="" src="./img/rolling.gif" alt="" width="30">
