--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<!-- End Google Tag Manager (noscript) -->
    <!--Loader General-->
    <div id="loader-wrapper">
-      <img src="./img/ring-loader.gif" alt="Loader">
+      <img src="./img/ring-loader.gif" alt="Loader" width="200">
    </div>
 
 
@@ -92,6 +92,7 @@
 			
 				<div class="scroll form form-group is-invalid" id="formvisibility" style="display: none;">
 					<div class="label-input-container" id="grupo-nombre">
+						<label for="Nombre" style="font-size: 13px; font-weight: 500;">Nombre</label>
 						<input class="rounded form-control" type="text" name="nombre" id="nombre" placeholder="Nombre">
 						<p class="formulario__input-error">El Nombre tiene que ser de 4 a 16 dígitos y solo puede contener letras
 						</p>
@@ -106,16 +107,18 @@
 								 -->
 			
 					<div class="label-input-container" id="grupo-localidad">
+						<label for="Localidad" style="font-size: 13px; font-weight: 500;">Localidad</label>
 						<input type="text" name="localidad" class="rounded form-control" placeholder="Localidad">
 						<p class="formulario__input-error">El Nombre tiene que ser de 4 a 16 dígitos y solo puede contener letras
 						</p>
 					</div>
 					<div class="label-input-container" id="grupo-telefono">
-						
+						<label for="Telefono" style="font-size: 13px; font-weight: 500;">Teléfono</label>
 						<input class="rounded form-control" type="text" name="telefono" id="telefono" placeholder="Teléfono">
 						<p class="formulario__input-error">ingrese su número de teléfono</p>
 					</div>
 					<div class="label-input-container" id="grupo-correo">
+						<label for="Mail" style="font-size: 13px; font-weight: 500;">Mail</label>
 						<input class="rounded form-control" type="email" name="correo" id="correo" placeholder="Mail">
 						<p class="formulario__input-error">ingrese su dirección de email</p>
 					</div>
