font conf and form top position

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--MATERIAL ICONS-->
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -87,7 +88,7 @@
 					<option value="1">SOY AFILIADO</option>
 					<option value="2">NO SOY AFILIADO</option>
 				</select>
-				<a id="enlace" href="https://www.sancorsalud.com.ar/contacto"
+				<a id="enlace" href="https://login.gruposancorseguros.com/login?state=hKFo2SBxc1BEYUVONVBIaVpaVHFkQXlfMkoxRlBrRUhGNUhCQ6FupWxvZ2luo3RpZNkgNW1oRXdYT1dKNUpuNkJFblZhWU13Szd0RkpHRjZDM1OjY2lk2SBWS1NkaWVMSlJ1ZFI2QzFobUQyMTI3ZUdPNmY3R0xUTw&client=VKSdieLJRudR6C1hmD2127eGO6f7GLTO&protocol=oauth2&redirect_uri=https%3A%2F%2Fmisaludonline.prevencionsalud.com.ar%2Fsignin-auth0&response_type=code&scope=openid%20profile%20email&nonce=638730286360086942.MjE1NmQ2ZDItMjE5Ny00ZTM4LWE3MzktOWQ1MTdmMDBhMmFiYzAyNjVmZDUtNmNiYS00NTE5LWE4Y2UtZGUyYWRiMTA5ZWQ5&x-client-SKU=ID_NET&x-client-ver=2.1.4.0"
 					style="display: none; text-align: center; padding-top: 10px;">Para atención a Afiliados Acceder aquí</a>
 			
 				<div class="scroll form form-group is-invalid" id="formvisibility" style="display: none;">
